--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
-    "compilerOptions": {
-      "outDir": "dist",
-      "module": "es6",
-      "esModuleInterop": true,
-      "moduleResolution": "node"
-    },
-    "ts-node": {
-      "esm": true
-    }
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "module": "es6",
+    "moduleResolution": "node",
+    "outDir": "dist"
+  },
+  "ts-node": {
+    "esm": true
   }
+}
